--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+.button {
+  padding: 0.5rem;
+  background-color: #61dafb;
+  border: none;
+  border-radius: 0.5rem;
+  border-collapse: separate;
+  float: left;
+}
